@@ -804,6 +804,7 @@ typedef struct xterror_struct
 #define NS_JABBERD_WRAPPER "http://jabberd.org/ns/wrapper"		/**< namespace used to wrap various internal data */
 #define NS_JABBERD_XDBSQL "http://jabberd.org/ns/xdbsql"		/**< namespace for substitution in xdb_sql configuration */
 #define NS_JABBERD_ACL "http://jabberd.org/ns/acl"			/**< namespace for access control lists */
+#define NS_JABBERD_LOOPCHECK "http://jabberd.org/ns/loopcheck"		/**< namespace for loopchecking of s2s connections */
 
 #define NS_SESSION "http://jabberd.jabberstudio.org/ns/session/1.0"	/**< namespace of the jabberd2 session control protocol (http://jabberd.jabberstudio.org/dev/docs/session.shtml) */
 
